--- a/apps/theme/styles/sections/product-card.scss
+++ b/apps/theme/styles/sections/product-card.scss
@@ -1,7 +1,7 @@
 product-card {
   position: relative;
 
-
+  display: flex;
   height: 100%;
   background-color: #f7f7f9;
   border-radius: 8px;
